--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ before_script:
 
 install:
   - composer install --prefer-source --no-interaction --dev
+  - cp .env.example .env
+  - php artisan key:generate
 
 notifications:
   email: lcosta_96@hotmail.com.br
